# homeassistant-solax-modbus

./: .codespellrc  .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  LICENSE  PHASE_B_STATUS.md  PR_BODY.md  README.md  README.old  const.py  hacs.json  mkdocs.yml  plugin_solis.py  pyproject.toml  sensor_patch_snippet.py  sensor_temperature_fix.md
.cursor/rules/: todo.ai-bug-reporting.mdc  todo.ai-commit-format.mdc  todo.ai-installation.mdc  todo.ai-task-management.mdc  todo.ai-task-notes.mdc  todo.ai-uninstall.mdc
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature-request.yaml  feature_request.yml  generic_inverter  non_solax_inverter.yaml  solax.yml
.github/workflows/: black.yml  ci-cd.yml  code-quality.yml  hacs-preview.yml  hacs.yml  hassfest.yml  lint.yml  mypy.yml  stale_issues.yml  tests.yml
custom_components/solax_modbus/: __init__ no lock.py  __init__.py  button.py  config_flow.py  const.py  debug.py  diagnostics.py  energy_dashboard.py  manifest.json  number.py  payload.py  plugin_Enertech.py  plugin_alphaess.py  plugin_growatt.py  plugin_sofar.py  plugin_sofar_new.py  plugin_sofar_old.py  plugin_sofar_test.py  plugin_solax.py  plugin_solax_a1j1.py  plugin_solax_ev_charger.py  plugin_solax_lv.py  plugin_solax_lv2.py  plugin_solax_mega_forth.py  plugin_solax_mic.py  plugin_solax_srne.py  plugin_solinteg.py  plugin_solis.py  plugin_solis_fb00.py  plugin_solis_old.py  plugin_srne.py  plugin_sunway.py  plugin_swatten.py  plugin_viessmann.py  protocols.py  pymodbus_compat.py  select.py  sensor.py  services.yaml  sofar.py  (+3 more)
custom_components/solax_modbus/translations/: cs.json  da.json  de.json  en.json  fr.json  it.json  nl.json  se.json
custom_components/solax_modbus_20220804/: __init__.py  config_flow.py  const.py  number.py  select.py  strings.json
custom_components/solax_modbus_20220804/translations/: de.json  en.json  nl.json  se.json
docs/: automation-examples.md  baudrates.md  compatible-adaptors.md  compatible-inverters.md  developer_guide.md  energy-dashboard-setup.md  energy-dashboard.md  faq.md  growatt-faq.md  growatt-operation-modes.md  index.md  installation.md  modbus-adaptor-setup.md  modbus-power-control-OLD.md  modbus-power-control.md  phase4-test-coverage-analysis.md  requirements.in  requirements.txt  sofar-energy-storage-modes.md  sofar-entity-description.md  sofar-faq.md  sofar-feedin-limitation.md  sofar-installation.md  sofar-operation-modes.md  sofar-reflux-control.md  solax-G23-operation-modes.md  solax-G4-operation-modes.md  solax-entity-description.md  solax-ev-charger-operation.md  solax-faq.md  solax-firmware-update.md  solax-mode1-modbus-power-control.md  solax-mode8-modbus-power-control.md  solax-parallel-mode.md  solax-phase-protection.md  solax-remote-control-redesigned.md  solax_mic_gen_entities.md  solis-faq.md  solis-operation-modes.md  type-ignore-audit.md  (+2 more)
docs/developer/: cicd-pipeline.md  coding-standards.md  contribution-workflow.md  debug-settings.md  development-setup.md  device-info-runtime-fixes.md  energy-dashboard.md  linting-proposal.md  performance-testing.md  phase-d-runtime-fixes.md  plugin-phase-naming.md  plugin-typing-guide.md  plugin-validation-function.md
docs/solax/: mypy-phase4-baseline.md  mypy-phase4-final-validation.md  mypy-phase4-pr.md
scripts/: analyze_star_imports.py  batch_convert.py  convert_star_imports.py  format.sh  generate_imports.py  lint.sh  print_imports.py  setup-pre-commit.zsh  smart_convert.py  test.zsh
solax_modbus/: __init__.py  config_flow.py  const.py  input_text.py  manifest.json  number.py  select.py  sensor.py  strings.json
solax_modbus/translations/: en.json  nl.json  se.json
tests/: conftest.py
tests/unit/: test_const.py  test_daily_delta_energy_sensor.py  test_dataclasses_imports.py  test_device_identifier_tuple_regressions.py  test_device_info_regressions.py  test_entity_description_collection_types_regressions.py  test_frozen_dataclass_regressions.py  test_import_structure.py  test_imports.py  test_init.py  test_linting_regressions.py  test_logging_setup.py  test_number_exceptions_type_regressions.py  test_number_payload_scaling.py  test_phase_c_regressions.py  test_phase_d_regressions.py  test_plugin_callback_return_regressions.py  test_plugin_logic.py  test_plugin_phase_naming.py  test_plugins_structure.py  test_solax_fit_inverter.py  test_star_imports.py  test_switch_value_function_signature_regressions.py
